<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="server_push_notifications">https://alphapushnotification.myctca.com/api/v1</string>
    <string name="server_bill_pay">https://www.patientportal.me/CTCA/Patient/login.html</string>
    <string name="endpoint_reset_password">/user/passwordReset?isNative=true</string>
    <string name="change_ctca_id">/user/detail</string>
    <string name="endpoint_registration">/user/registration?isNative=true</string>
    <string name="endpoint_authorize">/connect/token</string>
    <string name="endpoint_user_info">/connect/userinfo</string>
    <string name="endpoint_token_revocation">/connect/revocation</string>
    <string name="endpoint_notification_device_reg">/deviceregistration</string>
    <string name="endpoint_user_profile">/userprofile/getuserprofile</string>
    <string name="endpoint_impersonated_token">/userprofile/impersonatemobileuser</string>
    <string name="myctca_send_feedback">/support/sendfeedback</string>
    <string name="myctca_get_appointments">/appointments/getappointments</string>
    <string name="myctca_get_appointments_report">/appointments/getappointmentsreport</string>
    <string name="myctca_new_appointments">/appointments/requestnewappointment</string>
    <string name="myctca_new_appointmentsv2">/appointments/requestnewappointmentv2</string>
    <string name="myctca_cancel_appointments">/appointments/cancelappointment</string>
    <string name="myctca_cancel_appointmentsv2">/appointments/cancelappointmentv2</string>
    <string name="myctca_reschedule_appointments">/appointments/rescheduleappointment</string>
    <string name="myctca_reschedule_appointmentsv2">/appointments/rescheduleappointmentv2</string>
    <string name="myctca_get_lab_results">/labresults/getlabresultsgrouped</string>
    <string name="myctca_get_care_team">/securemessages/getcareteams</string>
    <string name="myctca_get_mail">/securemessages/getsecuremessages</string>
    <string name="myctca_new_mail">/securemessages/sendsecuremessage</string>
    <string name="myctca_archive_mail">/securemessages/archivesecuremessage</string>
    <string name="myctca_read_mail">/securemessages/setsecuremessageread</string>
    <string name="myctca_get_care_plan">/medicaldocuments/getcareplan</string>
    <string name="myctca_download_care_plan_report">/medicaldocuments/getcareplanreport</string>
    <string name="myctca_download_med_doc_report">/medicaldocuments/getmedicaldocumentreport</string>
    <string name="myctca_download_imaging_report">/medicaldocuments/getimagingdocumentreport</string>
    <string name="myctca_download_vitals_report">/healthhistory/getvitalsreport</string>
    <string name="myctca_download_allergies_report">/healthhistory/getallergiesreport</string>
    <string name="myctca_download_immunizations_report">/healthhistory/getimmunizationsreport</string>
    <string name="myctca_download_health_issues_report">/healthhistory/gethealthissuesreport</string>
    <string name="myctca_download_prescriptions_report">/healthhistory/getprescriptionsreport</string>
    <string name="myctca_post_roi">/downloads/submitroiform</string>
    <string name="myctca_get_clinical_summary">/documentexchange/getccdadocumentlist</string>
    <string name="myctca_get_clinical_summary_detail">/documentexchange/getccdadocumentdetail</string>
    <string name="myctca_get_clinical_summary_download">/documentexchange/downloadccdadocument</string>
    <string name="myctca_get_clinical_summary_transmit">/documentexchange/transmitccdadocumentregularemail</string>
    <string name="myctca_get_med_docs">/medicaldocuments/getmedicaldocuments?doctype=%1$s</string>
    <string name="myctca_get_med_doc">/medicaldocuments/getmedicaldocument?doctype=%1$s&amp;documentid=%2$s</string>
    <string name="myctca_get_imaging_docs">/medicaldocuments/getimagingdocuments</string>
    <string name="myctca_get_vitals">/healthhistory/getvitals</string>
    <string name="myctca_get_prescriptions">/healthhistory/getprescriptions</string>
    <string name="myctca_get_allergies">/healthhistory/getallergies</string>
    <string name="myctca_get_immunizations">/healthhistory/getimmunizations</string>
    <string name="myctca_get_health_issues">/healthhistory/gethealthissues</string>
    <string name="myctca_get_facility">/support/getfacilityinfo</string>
    <string name="myctca_get_facility_all">/support/getfacilityinfoall</string>
    <string name="myctca_alert_messages">/support/getactivesystemalertmessages</string>
    <string name="myctca_get_activity_logs">/userprofile/getuseractivitylogs</string>
    <string name="myctca_prescription_refill_request">/securemessages/sendprescriptionrenewalrequest</string>
    <string name="myctca_get_roi_form_info">/downloads/getroiform</string>
    <string name="myctca_get_roi_contact_info">/contactinfo/getcontactinfo</string>
    <string name="myctca_getroi_pdf">/downloads/getroipdf</string>
    <string name="myctca_get_annc_pdf">/downloads/downloadanncform</string>
    <string name="myctca_download_lab_results">/labresults/getlabresultsreport</string>
    <string name="myctca_get_clinical_summary_zip">/documentexchange/downloadccdadocument</string>
    <string name="myctca_get_mrn">/downloads/getmrn</string>
    <string name="myctca_annc_form_exists">/downloads/anncformexists</string>
    <string name="myctca_annc_form_submission">/downloads/submitanncform</string>
    <string name="myctca_get_user_preferences">/userprofile/getuserpreferences</string>
    <string name="myctca_set_user_preferences">/userprofile/saveuserpreferences</string>
    <string name="myctca_get_sit_survey">/userprofile/getsitsurveyurlasync</string>
    <string name="myctca_get_site_certification">/support/getsitecertificationasync</string>
    <string name="myctca_get_site_certification_image">/support/getsitecertificationimageasync</string>
    <string name="myctca_get_sit_document">/medicaldocuments/getsitpdf</string>
    <string name="myctca_get_application_info">/support/getapplicationinfo</string>
    <string name="myctca_download_resources_user_guide">/support/getandroiduserguideasync</string>
    <string name="myctca_download_resources_faqs">/support/getportalfaqsasync</string>
    <string name="myctca_download_resources_menu_enhancement">/nutrition/getenhanceyourmenuasync</string>
    <string name="myctca_download_resources_nutrition_basics">/nutrition/getnutritionbasicsasync</string>
    <string name="myctca_download_resources_symptom_management">/nutrition/getsymptomcontrolasync</string>
    <string name="myctca_download_resources_eating_challenge">/nutrition/geteatingischallengeasync</string>
    <string name="myctca_download_resources_health_future">/nutrition/getyourhealthyourfutureasync</string>
    <string name="myctca_home_caregiver_convert_account">/user/registration/mobilepatientverification?Ctcauniqueid=%1$s</string>
    <string name="myctca_patient_symptom_inventory">/medicaldocuments/getpatientreporteddocuments</string>
    <string name="myctca_external_links">/support/GetExternalLinkUrls</string>
    <string name="myctca_get_teams_access_token">https://apim.ctca-hope.com/test/telehealth/api/accesstoken</string>
    <string name="myctca_download_appt_detail">/appointments/getappointmentdetailsbyidreport</string>
    <string name="get_appointments_indicator">Retrieving Appointment Data…</string>
    <string name="send_appt_form_request_indicator">Sending Request…</string>
    <string name="refresh_appointments_indicator">Refreshing Appointment Data…</string>
    <string name="get_lab_results_indicator">Retrieving Lab Result Data…</string>
    <string name="refresh_lab_results_indicator">Refreshing Lab Result Data…</string>
    <string name="get_inbox_mail_indicator">Retrieving Inbox Secure Mail…</string>
    <string name="refresh_inbox_secure_mail_indicator">Refreshing Inbox Secure Mail…</string>
    <string name="refresh_sent_secure_mail_indicator">Refreshing Sent Secure Mail…</string>
    <string name="refresh_archive_secure_mail_indicator">Refreshing Archive Secure Mail…</string>
    <string name="send_new_mail_indicator">Sending Secure Mail…</string>
    <string name="get_sent_mail_indicator">Retrieving Sent Secure Mail…</string>
    <string name="get_archived_mail_indicator">Retrieving Archived Secure Mail…</string>
    <string name="download_appointments_indicator">Downloading Appointments…</string>
    <string name="download_appointment_indicator">Downloading Appointment…</string>
    <string name="download_lab_results_indicator">Downloading Lab Results…</string>
    <string name="get_external_links_indicator">Retrieving External Links…</string>
    <string name="refresh_external_links_indicator">Refreshing External Links…</string>
    <string name="get_vitals_indicator">Retrieving Vitals…</string>
    <string name="get_prescriptions_indicator">Retrieving Prescriptions…</string>
    <string name="submit_request_renewal_indicator">Submitting Request Renewal…</string>
    <string name="get_allergies_indicator">Retrieving Allergies…</string>
    <string name="get_immunizations_indicator">Retrieving Immunizations…</string>
    <string name="get_health_issues_indicator">Retrieving Health Issues…</string>
    <string name="download_vitals_indicator">Downloading Vitals…</string>
    <string name="download_prescriptions_indicator">Downloading Prescriptions…</string>
    <string name="download_allergies_indicator">Downloading Allergies…</string>
    <string name="download_immunizations_indicator">Downloading Immunizations…</string>
    <string name="download_health_issues_indicator">Downloading Health Issues…</string>
    <string name="refresh_vitals_indicator">Refreshing Vitals…</string>
    <string name="login_terms_of_use_accept">I accept the Terms of Use</string>
    <string name="login_terms_of_use_decline">I decline the Terms of Use</string>
    <string name="login_terms_of_use_submit">Submit</string>
    <string name="create_account_title">Continue registration?</string>
    <string name="create_account_disclaimer_text">By creating a CTCA ID, you agree to the Terms and Conditions and to the CTCA Privacy Policy.</string>
    <string name="create_account_terms">Terms and Conditions</string>
    <string name="create_account_privacy">Privacy Policy</string>
    <string name="bottom_nav_item_0">Home</string>
    <string name="bottom_nav_item_1">Appointments</string>
    <string name="bottom_nav_item_2">Lab Results</string>
    <string name="bottom_nav_item_3">Secure Mail</string>
    <string name="bottom_nav_item_4">More</string>
    <string name="more_med_doc_care_plan">Care Plan</string>
    <string name="more_med_doc_clinical_summary">Clinical Summaries</string>
    <string name="more_med_doc_clinical">Clinical</string>
    <string name="more_med_doc_radiation">Radiation</string>
    <string name="more_med_doc_imaging">Imaging</string>
    <string name="more_med_doc_integrative">Integrative</string>
    <string name="more_med_doc_no_permissions">You do not have sufficient permissions to view any medical documents for this patient. If this is incorrect, please call the care team directly.</string>
    <string name="download_btn_text">Download</string>
    <string name="transmit_clinical_summary_btn_text">Transmit</string>
    <string name="cancel_clinical_summary_btn_text">Cancel</string>
    <string name="more_about_myctca_privacy">Privacy Practices</string>
    <string name="more_about_myctca_certifications">Certifications</string>
    <string name="my_ctca_portal_version">VERSION</string>
    <string name="more_about_myctca_title">myCTCA Portal</string>
    <string name="more_about_myctca_copyright">Copyright © %1$s IPB</string>
    <string name="more_about_myctca_version">Version %1$s</string>
    <string name="more_about_myctca_legal">LEGAL</string>
    <string name="more_about_myctca_terms">Terms and Conditions</string>
</resources>