<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_0"
        android:icon="@drawable/home_icon"
        android:title="@string/bottom_nav_item_0" />
    <item
        android:id="@+id/menu_item_1"
        android:icon="@drawable/calendar"
        android:titleCondensed="Appts"
        android:title="@string/bottom_nav_item_1" />
    <item
        android:id="@+id/menu_item_2"
        android:icon="@drawable/labs"
        android:titleCondensed="Labs"
        android:title="@string/bottom_nav_item_2" />
    <item
        android:id="@+id/menu_item_3"
        android:icon="@drawable/mail"
        android:titleCondensed="Mail"
        android:title="@string/bottom_nav_item_3" />
    <item
        android:id="@+id/menu_item_4"
        android:icon="@drawable/more"
        android:title="@string/bottom_nav_item_4" />
</menu>