<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/create_account_title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        android:text="@string/create_account_disclaimer_text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/viewLightGrey"
        android:padding="7dp"/>

    <Button
        android:id="@+id/createAccountTerms"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:paddingBottom="14dp"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        android:paddingTop="14dp"
        android:text="@string/create_account_terms"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/viewLightGrey"
        android:padding="7dp"/>

    <Button
        android:id="@+id/createAccountPrivacy"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:paddingBottom="14dp"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        android:paddingTop="14dp"
        android:text="@string/create_account_privacy"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/viewLightGrey"
        android:paddingTop="7dp"
        android:paddingBottom="14dp"/>

</LinearLayout>
