<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DisplayWebViewFragment"
    android:orientation="vertical">

    <WebView
        android:id="@+id/wv_terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/terms_of_use_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_8">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_accept_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:theme="@style/CTCACheckBox"
                android:text="@string/login_terms_of_use_accept"/>
            <RadioButton
                android:id="@+id/rb_decline_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:checked="true"
                android:theme="@style/CTCACheckBox"
                android:text="@string/login_terms_of_use_decline"/>
        </RadioGroup>

        <Button
            android:id="@+id/terms_of_use_submit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:elevation="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_terms_of_use_submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>


</LinearLayout>