<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_med_doc_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="com.myctca.fragment.MoreMedicalDocFragment"
    android:background="@color/white">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/changeApptScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:background="@color/white">

            <Button
                android:id="@+id/med_doc_care_plan_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.04"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="24dp"
                android:text="@string/more_med_doc_care_plan"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/listSeparator"/>

            <Button
                android:id="@+id/med_doc_clinical_summary_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.04"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="24dp"
                android:text="@string/more_med_doc_clinical_summary"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/listSeparator"/>

            <Button
                android:id="@+id/med_doc_clinical_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.04"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="24dp"
                android:text="@string/more_med_doc_clinical"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/listSeparator"/>

            <Button
                android:id="@+id/med_doc_radiation_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.04"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="24dp"
                android:text="@string/more_med_doc_radiation"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/listSeparator"/>

            <Button
                android:id="@+id/med_doc_imaging_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.04"
                android:paddingEnd="12dp"
                android:paddingStart="24dp"
                android:gravity="start|center_vertical"
                android:text="@string/more_med_doc_imaging"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/listSeparator"/>

            <Button
                android:id="@+id/med_doc_integrative_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.04"
                android:paddingEnd="12dp"
                android:paddingStart="24dp"
                android:gravity="start|center_vertical"
                android:text="@string/more_med_doc_integrative"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/listSeparator"/>

        </LinearLayout>
    </ScrollView>

    <!-- Empty View -->
    <LinearLayout
        android:id="@+id/med_doc_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/appt_empty_view_image_view"
            android:layout_width="200dp"
            android:layout_height="220dp"
            app:srcCompat="@drawable/splash_9"/>

        <TextView
            android:id="@+id/appt_empty_view_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/more_med_doc_no_permissions"
            android:textSize="15sp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>